# recipe-recommendation-google-adk

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  server.py  waste_reduction_agent.py
experiments/: adk_practise.ipynb  experiment1.ipynb
src/recipe_agent/: __init__.py  app.py  config.py  graph.py  prompts.py  runtime.py  schemas.py  state.py
src/recipe_agent/data/: ingredient_prices.csv  recipes.csv  recipes_db.py  wallet.csv
src/recipe_agent/nodes/: __init__.py  extract.py  extract_user_preferences.py  generate_recommendation.py  rank_recipes.py  search_recipes.py
tests/: conftest.py  test_extract.py  test_graph.py  test_nodes.py  test_rank.py  test_recommend.py  test_search.py
